Added mobile/desktop CSS.

--- a/hugo.toml
+++ b/hugo.toml
@@ -21,6 +21,7 @@ footer = """
 """
 
 navigation = [
+    ["home",    "/"],
     ["about",   "/pages/about/"],
     ["posts",   "/posts/"],
     ["bluesky", "https://bsky.app/profile/wattleworks.bsky.social"],
