--- a/netlify.toml
+++ b/netlify.toml
@@ -6,5 +6,6 @@ publish = "public"
 HUGO_VERSION = "0.150.0"
 
 [[redirects]]
-from = "/index.xml"
-to   = "/posts/index.xml"
+from  = "/index.xml"
+to    = "/posts/index.xml"
+force = true
